[tool.poetry]
name = "srobo_pitools"
version = "0.1.0"
description = "Python library and set of utilities for doing useful things with Raspberry Pis."
authors = ["Dan Trickey <git@trickey.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
getpiassetcode = 'srobo_pitools.commands.get_asset_code:main'